# alphavantage

./: .editorconfig  .gitignore  .travis.yml  LICENSE  README.md  alphavantage.cabal  stack.yaml
.github/workflows/: haskell.yml
project/: alphavantage.sublime-project
src/AlphaVantage/: Config.hs  DigitalCurrency.hs  ForeignExchange.hs  TimeOrDay.hs
src/AlphaVantage/DigitalCurrency/: Daily.hs  Intraday.hs  Monthly.hs  Weekly.hs
src/AlphaVantage/Stock/: TimeSeries.hs
src/AlphaVantage/Stock/TimeSeries/: Daily.hs  DailyAdjusted.hs  Intraday.hs  Monthly.hs  MonthlyAdjusted.hs  Weekly.hs  WeeklyAdjusted.hs
test/AlphaVantage/DigitalCurrency/: HttpSpec.hs  JsonSpec.hs
test/AlphaVantage/ForeignExchange/: HttpSpec.hs  JsonSpec.hs
test/AlphaVantage/Stock/TimeSeries/: HttpSpec.hs  JsonSpec.hs
testdata/AlphaVantage/: CurrencyExchangeRate.json
testdata/AlphaVantage/DigitalCurrency/: Daily.json  Intraday.json  Monthly.json  Weekly.json
testdata/AlphaVantage/Stock/TimeSeries/: Daily.json  DailyAdjusted.json  Intraday.json  Monthly.json  MonthlyAdjusted.json  Weekly.json  WeeklyAdjusted.json
